# Website-Blocker

./: README.md  pyproject.toml  requirements.txt
src/website_blocker/: __init__.py  exceptions.py  gui.py  hosts_manager.py  main.py
tests/: test_hosts_manager.py
